--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
             if (view === 'landing') return (
                 <div className="flex flex-col items-center justify-center min-h-screen p-6 text-center">
-                    <h1 className="text-6xl font-black italic tracking-tighter mb-2">🏎🏁 F1<span className="text-[#e10600]">PADDOCK</span></h1>
+                    <h1 className="text-6xl font-black italic tracking-tighter mb-2">🏎🏁_F1<span className="text-[#e10600]">PADDOCK</span></h1>
                     <p className="text-zinc-500 font-bold uppercase tracking-[0.3em] text-[10px] mb-12">2026 Regulation Era</p>
                     
                     <div className="f1-glass p-8 rounded-[2rem] shadow-2xl mb-8 w-full max-w-sm">
