Update and rename index.html to index_v2.html

--- a/index_v2.html
+++ b/index_v2.html
@@ -42,7 +42,7 @@
 const SB_URL = "https://anlktalskporlebnghpp.supabase.co";
 const SB_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImFubGt0YWxza3BvcmxlYm5naHBwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njg3NDA0NTksImV4cCI6MjA4NDMxNjQ1OX0.fF8Li77jRqGqtTk2CRIXR1J1SS8AVb2YeuXzT-5J-Eg";
 
-const supabase = supabaseJs.createClient(SB_URL, SB_KEY);
+const supabase = supabase.createClient(SB_URL, SB_KEY);
 
 /* ===================== CONSTANTS ===================== */
 
